change provider to ai configuration

--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -226,7 +226,7 @@
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-22">
-                Provider
+                AI Configuration
               </h6>
             </div>
           </li>
@@ -236,7 +236,7 @@
             </svg>
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-learning"></use>
-            </svg><span class=" ">Provider</span></a>
+            </svg><span class=" ">Configuration</span></a>
           </li>
           {% endif %}
           {% if request.user.role.role != 'Caller'  %}
