Notification center issue solve and added if condition on 'met_percent' is call_per_hour function.

--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -191,6 +191,8 @@
                             </li>
                         `);
                     });
+                    $('#notification-list').append('<li> </li>');
+
                 } else {
                     $('#notification-list').append('<li>No new notifications.</li>');
                 }
