--- a/zonoapp/templates/pages/provider/provider_table.html
+++ b/zonoapp/templates/pages/provider/provider_table.html
@@ -150,7 +150,7 @@
                                     <label for="editProviderName">Configuration Name</label>
                                     <input type="text" class="form-control" id="editProviderName" required>
                                 </div>
-                                <div class="form-group">
+                                <!-- <div class="form-group">
                                     <label for="editProviderType">Configuration Type</label>
                                     <select class="form-control" id="editProviderType" required>
                                         <option value="" disabled>Select Configuration Type</option>
@@ -158,7 +158,8 @@
                                             <option value="{{ provider_type }}">{{ provider_type }}</option>
                                         {% endfor %}
                                     </select>
-                                </div>
+                                </div> -->
+                                <br>    
                                 <div id="provider_config" style="height: 300px; width: 100%;"></div>
                                 <button type="submit" class="btn btn-primary">Save changes</button>
                             </form>
