credit balence modified in header

--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -39,7 +39,7 @@
         <li class="message ">
           <div class="credit-icon" style=" display: flex; flex-direction: row; height:3vh;">
 
-            <span class="text-center"> <i class="fa fa-dollar"></i> <b>Credits Balance</b><br> Minutes : <strong
+            <span class="text-center"> <b>Credit Balance</b><br> Minutes : <strong
                 id="userCredit"> 0.00 </strong></span>
             <div class="div-add-card">&nbsp;
               <a href="{% url 'contact_sale' %}"> <button class="btn btn-primary d-flex justify-content-center align-items-center" type="button" style="width: 10px;height: 80%;">
