--- a/zonoapp/templates/pages/campaign/contact_list.html
+++ b/zonoapp/templates/pages/campaign/contact_list.html
@@ -86,18 +86,18 @@
 </div>
 
 <div class="container-fluid mt-4">
-
-    <table id="contactTable" class="table table-inverse table-striped dataTable" style="margin-left: 0px;">
-        <thead>
+<div class="table-responsive table-striped">
+    <table id="contactTable" class="table" >
+        <thead class="table-dark">
             <tr>
-                <th class="">
+                <th class="" >
                     <button class="btn btn-pill btn-primary btn-air-primary" id="deleteSelected" type="button">
                         <i class="icofont icofont-ui-delete"></i>
                     </button>
                 </th>
                 {% if contact_list %}
                     {% for key in contact_list.0.keys %}
-                        <th class="sorting_asc">{{ key }}</th>
+                        <th class="sorting_asc"> <span style="font-size: 19px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">{{ key }}</span></th>
                     {% endfor %}
                 {% endif %}
             </tr>
@@ -110,12 +110,13 @@
                     <input class="form-switch contact-checkbox" data-contact-id="{{ contact.contact_id }}" type="checkbox">
                 </td>
                 {% for value in contact.values %}
-                    <td>{{ value }}</td>
+                    <td><h6>{{ value }}</h6></td>
                 {% endfor %}
             </tr>
             {% endfor %}
         </tbody>
     </table>
+    </div>
     <div class="job-pagination">
         <nav aria-label="Page navigation example">
             <ul class="pagination pagination-primary">
@@ -148,6 +149,7 @@
             </ul>
         </nav>
     </div>
+</div>
 </div>
 
 <!-- Include jQuery and DataTables JS and CSS files from CDN -->
